Error del brazo solucionado

--- a/Robocol/testapp/src/app/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/brazo/brazo-pestania/brazo-pestania.component.html
@@ -51,7 +51,7 @@
                   <td><button (mousedown)="change_value('joint_1', 'decrease')" (mouseup)="stop_changing_value()" id="1_ATRAS" type="button" class="btn btn-secondary button_left"><=</button></td>
                   <td class="text-center col-6" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px;">
                      <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: {{joint_1_value}}%; margin-left: 0px; margin-right: 0px;" aria-valuenow="{{joint_1_value}}" aria-valuemin="{{min_value}}" aria-valuemax="{{max_value}}"></div>
+                        <div class="progress-bar" role="progressbar" style="width: {{joint_1_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_1_value}}" attr.aria-valuemin="{{min_value}}" attr.aria-valuemax="{{max_value}}"></div>
                      </div>
                   </td>
                   <td><button id="1_ADELANTE" (mousedown)="change_value('joint_1', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
@@ -62,7 +62,7 @@
                   <td><button id="2_ATRAS" (mousedown)="change_value('joint_2', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
                   <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
                      <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: {{joint_2_value}}%; margin-left: 0px; margin-right: 0px;" aria-valuenow="{{joint_2_value}}" aria-valuemin="{{min_value}}" aria-valuemax="{{max_value}}"></div>
+                        <div class="progress-bar" role="progressbar" style="width: {{joint_2_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_2_value}}" attr.aria-valuemin="{{min_value}}" attr.aria-valuemax="{{max_value}}"></div>
                      </div>
                   </td>
                   <td><button id="2_ADELANTE" (mousedown)="change_value('joint_2', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
@@ -73,7 +73,7 @@
                   <td><button id="3_ATRAS" (mousedown)="change_value('joint_3', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
                   <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
                      <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: {{joint_3_value}}%; margin-left: 0px; margin-right: 0px;" aria-valuenow="{{joint_3_value}}" aria-valuemin="{{min_value}}" aria-valuemax="{{max_value}}"></div>
+                        <div class="progress-bar" role="progressbar" style="width: {{joint_3_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_3_value}}" attr.aria-valuemin="{{min_value}}" attr.aria-valuemax="{{max_value}}"></div>
                      </div>
                   </td>
                   <td><button id="3_ADELANTE" (mousedown)="change_value('joint_3', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
@@ -84,7 +84,7 @@
                   <td><button id="4_ATRAS" (mousedown)="change_value('joint_4', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
                   <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
                      <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: {{joint_4_value}}%; margin-left: 0px; margin-right: 0px;" aria-valuenow="{{joint_4_value}}" aria-valuemin="{{min_value}}" aria-valuemax="{{max_value}}"></div>
+                        <div class="progress-bar" role="progressbar" style="width: {{joint_4_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_4_value}}" attr.aria-valuemin="{{min_value}}" attr.aria-valuemax="{{max_value}}"></div>
                      </div>
                   </td>
                   <td><button id="4_ADELANTE" (mousedown)="change_value('joint_4', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
@@ -95,7 +95,7 @@
                   <td><button id="5_ATRAS" (mousedown)="change_value('joint_5', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
                   <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
                      <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: {{joint_5_value}}%; margin-left: 0px; margin-right: 0px;" aria-valuenow="{{joint_5_value}}" aria-valuemin="{{min_value}}" aria-valuemax="{{max_value}}"></div>
+                        <div class="progress-bar" role="progressbar" style="width: {{joint_5_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_5_value}}" attr.aria-valuemin="{{min_value}}" attr.aria-valuemax="{{max_value}}"></div>
                      </div>
                   </td>
                   <td><button id="5_ADELANTE" (mousedown)="change_value('joint_5', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
@@ -106,7 +106,7 @@
                   <td><button id="6_ATRAS" (mousedown)="change_value('joint_6', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
                   <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
                      <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: {{joint_6_value}}%; margin-left: 0px; margin-right: 0px;" aria-valuenow="{{joint_6_value}}" aria-valuemin="{{min_value}}" aria-valuemax="{{max_value}}"></div>
+                        <div class="progress-bar" role="progressbar" style="width: {{joint_6_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_6_value}}" attr.aria-valuemin="{{min_value}}" attr.aria-valuemax="{{max_value}}"></div>
                      </div>
                   </td>
                   <td><button id="6_ADELANTE" (mousedown)="change_value('joint_6', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
@@ -117,7 +117,7 @@
                   <td><button id="7_ATRAS" (mousedown)="change_value('joint_7', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
                   <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
                      <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: {{joint_7_value}}%; margin-left: 0px; margin-right: 0px;" aria-valuenow="{{joint_7_value}}" aria-valuemin="{{min_value}}" aria-valuemax="{{max_value}}"></div>
+                        <div class="progress-bar" role="progressbar" style="width: {{joint_7_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_7_value}}" attr.aria-valuemin="{{min_value}}" attr.aria-valuemax="{{max_value}}"></div>
                      </div>
                   </td>
                   <td><button id="7_ADELANTE" (mousedown)="change_value('joint_7', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
