mas botones - no funcionales

--- a/Robocol/testapp/src/app/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/brazo/brazo-pestania/brazo-pestania.component.html
@@ -29,14 +29,26 @@
                <h4>Rotation:</h4>
             </div>
             <div class="row justify-content-center">
-               <div class="col">
+               <div class="col justify-content-center">
                   <h5>Roll</h5>
+                  <div class="row justify-content-center">
+                     <button>CCW</button>
+                     <button>CCW</button>
+                  </div>
                </div>
-               <div class="col">
+               <div class="col justify-content-center">
                   <h5>Pitch</h5>
+                  <div class="row justify-content-center">
+                     <button>CCW</button>
+                     <button>CCW</button>
+                  </div>
                </div>
-               <div class="col">
+               <div class="col justify-content-center">
                   <h5>Yaw</h5>
+                  <div class="row justify-content-center">
+                     <button>CCW</button>
+                     <button>CCW</button>
+                  </div>
                </div>
             </div>
          </div>
